--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,6 @@ services:
       - ./GOPATH/pkg:/go/pkg
       - ./GOPATH/bin:/go/bin
       - ./src:/src
+    environment:
+      - GOOS=darwin
+      - GOARCH=amd64
